--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,4 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+    url: /cv/cv.pdf
