--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "AI Research, Reasoning and Human-AI Collaboration."
   location         : "Puget Sound"
-  employer         : "Kensho / S&P Global"
+  employer         : "Apple"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=7oJZmG0AAAAJ"
   email            :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "rikkoncelkedzio"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
